--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,22 @@
     font-weight: 400;
     font-style: normal;
   }
+
+  .element {
+    transform: perspective(500px) rotate(0deg) scale(1, 1) skew(0deg, 0deg) translate(0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1) translate3d(0px, 0px, 0px);
+    background: url("background.jpeg") center center / cover no-repeat;
+    mix-blend-mode: normal;
+    width: 300px;
+    height: 300px;
+    padding: 0px;
+    border-width: 0px;
+    border-radius: 0px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+    opacity: 1;
+    box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+    outline: rgb(0, 0, 0) solid 0px;
+    outline-offset: 0px;
+    filter: blur(0px) brightness(1) contrast(1) grayscale(0) hue-rotate(0deg) invert(0) opacity(1) saturate(1) sepia(0);
+    backdrop-filter: blur(0px) brightness(1) contrast(1) grayscale(0) hue-rotate(0deg) invert(0) opacity(1) saturate(1) sepia(0);
+}
