--- a/css/style.css
+++ b/css/style.css
@@ -18,21 +18,69 @@
     font-style: normal;
   }
 
-  .element {
-    transform: perspective(500px) rotate(0deg) scale(1, 1) skew(0deg, 0deg) translate(0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1) translate3d(0px, 0px, 0px);
-    background: url("background.jpeg") center center / cover no-repeat;
-    mix-blend-mode: normal;
-    width: 300px;
-    height: 300px;
-    padding: 0px;
-    border-width: 0px;
-    border-radius: 0px;
-    border-color: rgb(0, 0, 0);
-    border-style: solid;
-    opacity: 1;
-    box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
-    outline: rgb(0, 0, 0) solid 0px;
-    outline-offset: 0px;
-    filter: blur(0px) brightness(1) contrast(1) grayscale(0) hue-rotate(0deg) invert(0) opacity(1) saturate(1) sepia(0);
-    backdrop-filter: blur(0px) brightness(1) contrast(1) grayscale(0) hue-rotate(0deg) invert(0) opacity(1) saturate(1) sepia(0);
-}
+  html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url('../media/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  h1 {
+    font-size: 1.5em;
+    text-align: center;
+    margin: 0;
+    line-height: 1.2;
+  }
+  
+  .form-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    width: 90%;
+    max-width: 400px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="date"],
+  input[type="submit"] {
+    width: 100%;
+    max-width: 300px;
+    padding: 8px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  input[type="submit"] {
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border: none;
+  }
+  
+  /* Media Queries for responsive design */
+  @media (max-width: 768px) {
+    .form-wrapper {
+      width: 80%;
+      padding: 15px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .form-wrapper {
+      width: 90%;
+      padding: 10px;
+    }
+  }
+  
