--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,3 @@
-.space-grotesk {
-    font-family: "Space Grotesk", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-  }
-
-  .outfit {
-    font-family: "Outfit", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-  }
-  
-  .micro-5-regular {
-    font-family: "Micro 5", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
   html, body {
     height: 100%;
     margin: 0;
@@ -37,6 +17,13 @@
     line-height: 1.2;
   }
   
+  p {
+    font-size: 1em;
+    text-align: center;
+    margin: 10px;
+    line-height: 1.2;
+  }
+
   .form-wrapper {
     display: flex;
     flex-direction: column;
