--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@
   
   input[type="submit"] {
     justify-content: center;
-    background-color: hsl(107, 100%, 50%);
+    background-color: #37ff00;
     color: white;
     border: none;
   }
