--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
   
-  @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sixtyfour+Convergence&family=Space+Grotesk:wght@300..700&display=swap');
 
   html, body {
     height: 100%;
@@ -23,7 +23,7 @@
     margin: 0;
     line-height: 1.2;
     color: #2ea80c;
-    font-family: "Space Grotesk", serif;
+    font-family: "Sixtyfour Convergence", serif;
     font-optical-sizing: auto;
     font-weight: 700;
   }
@@ -33,6 +33,9 @@
     text-align: center;
     margin: 10px;
     line-height: 1.2;
+    font-family: "Space Grotesk", serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
   }
 
   ol {
